@@ -16,6 +16,7 @@ from __future__ import annotations
 
 import pytest
 
+from astrapy.event_observers import ObservableEvent, Observer
 from astrapy.utils.api_options import APIOptions, defaultAPIOptions
 
 
@@ -41,6 +42,30 @@ class TestAPIOptions:
                 database_additional_headers={"d": "y", "D": None},
                 admin_additional_headers={"a": "y", "A": None},
                 redacted_header_names={"y"},
+            )
+        )
+
+        assert opts_1 == opts_2
+
+    @pytest.mark.describe("test of event observer inheritance in APIOptions")
+    def test_apioptions_eventobservers(self) -> None:
+        lst_a: list[ObservableEvent] = []
+        lst_b: list[ObservableEvent] = []
+        obs_a = Observer.from_event_list(lst_a)
+        obs_b = Observer.from_event_list(lst_b)
+        opts_d = defaultAPIOptions(environment="hcd")
+        opts_1 = opts_d.with_override(
+            APIOptions(
+                event_observers={"a": obs_a, "b": obs_b},
+            )
+        )
+        opts_2 = opts_d.with_override(
+            APIOptions(
+                event_observers={"a": obs_a},
+            )
+        ).with_override(
+            APIOptions(
+                event_observers={"b": obs_b},
             )
         )
 
