@@ -1,5 +1,6 @@
 main
 ====
+Event Observer API, to listen to events (warnings, payloads/responses, ...) besides logging
 mainteinance: enabled text-index integration tests on Astra
 maintenance: introduced the publish-and-release workflow machinery
 maintenance: split development/maintenance from user README
